--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,11 +1,13 @@
 {
-  "homePage": "হোম পেজ",
+  "homePage": "মূল পর্দা",
+  "secondScreen": "দ্বিতীয় পাতা",
   "personalInformation": "ব্যক্তিগত তথ্য",
   "name": "নাম",
   "nameHint": "আপনার নাম প্রবেশ করুন",
   "email": "ইমেইল",
   "emailHint": "তুমার ইমেইল প্রবেশ করাও",
   "dateOfBirth": "জন্ম তারিখ",
+  "time": "সময়",
   "requiredField": "প্রয়োজনীয় ক্ষেত্র",
   "submitInfo": "তথ্য জমা দিন",
   "aboutUs": "আমাদের সম্পর্কে",
