--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,11 +1,13 @@
 {
   "homePage": "صفحه اصلی",
+  "secondScreen": "الصفحة الثانية",
   "personalInformation": "معلومات شخصی",
   "name": "اسم",
   "nameHint": "اسم خود را وارد نمایید",
   "email": "آدرس الکترونیکی",
   "emailHint": "آدرس الکترونیکی خود را وارد نمایید",
   "dateOfBirth": "تاریخ تولد",
+  "time": "باشد",
   "requiredField": "این زمینه ضروری می باشد",
   "submitInfo": "ثبت معلومات",
   "aboutUs": "در باره ما",
